--- a/Basic.ipynb
+++ b/Basic.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "output_type": "stream",
      "text": [
       "current time\n",
-      "2025:04:09 : 19 : 53 : 26\n"
+      "2025:04:17 : 17 : 51 : 07\n"
      ]
     }
    ],
@@ -98,6 +98,24 @@
     "print(\"current time\")\n",
     "print(now.strftime(\"%Y:%m:%d : %H : %M : %S\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Circle Area Calculator\n",
+    "Write a Python program that calculates the area of a circle based on the radius entered by the user.\n",
+    "Sample Output :\n",
+    "r = 1.1\n",
+    "Area = 3.8013271108436504"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
